# embedmono

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
cs/: Cat.cs  Dog.cs
